# arcOS

./: .prettierignore  Description.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
AI Work Logs/: Codex_Log.json
docs/: CHAIN_VALIDATION_LATEST.json  CHAIN_VALIDATION_LATEST.md  OPENCLAW_SETUP.md  VOICE_PLAYBACK_IMPLEMENTATION.md
memory-service/: .env.example  README.md  pyproject.toml
memory-service/ingestion/: chunker.py  embedder.py  lancedb_writer.py  obsidian_reader.py  run_ingest.py
memory-service/mcp_server/: server.py
memory-service/prompting/: compressor.py
memory-service/retrieval/: hybrid_search.py  hyde.py  reranker.py
memory-service/tests/: test_obsidian_reader.py  test_server_filters.py
memory-service/watcher/: file_watcher.py
openclaw-template/: openclaw.example.json
openclaw-template/workspace/: AGENTS.md  ARCOS_RUNTIME.md  BOOTSTRAP.md  HOOKS.md  IDENTITY.example.md  SOUL.example.md  TOOLS.md  USER.example.md
scripts/: build-mac.sh  openclaw-boot.sh  validate-chain.mjs
src/main/: bugReport.ts  chainHistory.ts  logger.ts  main.ts  routingLog.ts  sessionHistory.ts
src/main/audit/: auditEngine.ts
src/main/database/: db.ts  operations.ts  schema.ts
src/main/discord/: discordGateway.ts
src/main/hooks/: hookRegistry.ts
src/main/ipc/: apiKeyIpc.ts  auditIpc.ts  bugReportIpc.ts  databaseIpc.ts  discordIpc.ts  fabricIpc.ts  historyIpc.ts  hookIpc.ts  layoutTransferIpc.ts  logRoutingIpc.ts  mcpIpc.ts  memoryIpc.ts  (+6 more)
src/preload/: preload.ts
src/renderer/: App.tsx  electron.d.ts  index.css
(+90 files in other folders)
